kubernetes/broker.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: broker
  template:
    metadata:
      labels:
        app: broker
    spec:
      containers:
        - name: broker
          image: apache/kafka:4.0.0
          ports:
            - containerPort: 9092
            - containerPort: 19092
---
apiVersion: v1
kind: Service
metadata:
  name: broker
spec:
  selector:
    app: broker
  ports:
    - name: kafka
      port: 9092
      targetPort: 9092
    - name: kafka-alt
      port: 19092
      targetPort: 19092
