kubernetes/main-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-service
  template:
    metadata:
      labels:
        app: main-service
    spec:
      containers:
        - name: main-service
          image: dtomala/ersms-main-service
          ports:
            - containerPort: 8091
---
apiVersion: v1
kind: Service
metadata:
  name: main-service
spec:
  selector:
    app: main-service
  ports:
    - port: 8091
      targetPort: 8091
