kubernetes/stock-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock-service
  template:
    metadata:
      labels:
        app: stock-service
    spec:
      containers:
        - name: stock-service
          image: dtomala/ersms-stock-service
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: stock-service
spec:
  selector:
    app: stock-service
  ports:
    - port: 8000
      targetPort: 8000
